--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="call_btn">
             <a href="">
-              Call: +01234567890
+              Call: +1 2819809111
             </a>
           </div>
         </nav>
@@ -233,9 +233,9 @@
             </div>
 
             <p>
-              It is a long established fact that a reader will be distracted
+              It is a long established fact that readers are usually distracted
               by the readable content of a page when looking at its layout.
-              The point of using Lorem Ipsum is that it has a more-or-less
+              The point of using Lorem Ipsum is that it has a more or less
               normal distribution of letters, as opposed to using 'Content
               here , content here', making it
             </p>
