--- a/about.html
+++ b/about.html
@@ -140,7 +140,7 @@
           <div class="detail-box">
             <div class="custom_heading-container">
               <h2>
-                About Design
+                Information About Design
               </h2>
             </div>
 
